tests/paczka1/fuzzy1/18273770.err
Error in line 5: HLtbd4fH A585 11,7
Error in line 21: j31C A585 45,5
Error in line 19: HLtbd4fH A557 79,0
